syntax = "proto3";
option java_multiple_files = true;
import "google/protobuf/empty.proto";
package me.samueldcs.chatty;

message ChatMessage {
  string sender = 1;
  string channel = 2;
  string content = 3;
}

message ChatListenRequest {
  string channel = 1;
}

service ChatService {
  rpc postMessage(ChatMessage) returns (google.protobuf.Empty);
  rpc readMessages(ChatListenRequest) returns (stream ChatMessage);
}
